# jb-download

./: .gitignore  README.md  install.sh  jb-download_settings.json  pyproject.toml  uninstall.sh  update.sh
.github/workflows/: ci.yml
jb_download/: cli.py  download.py  downloader.py  settings.py
src/download_youtube/: cli.py
