[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "download_youtube"
description = "Download a link from YouTube"
version = '0.0.1'
requires-python = ">=3.9"
dependencies = [
    "click",
    "yt_dlp"
]

[project.scripts]
dlyt = "download_youtube.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "tox",
    "build",
    "pytest",
    "coverage"
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".cache",
    ".direnv",
    ".eggs",
    "*.egg-info",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "*.pyc",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".code-workspace"
]
select = ["B", "C", "E", "F", "N", "W", "B9"]
ignore = [
    "E203",
    "E501",
    "E722",
    "N802",
    "F401"
]
line-length = 100